Minor changes on cv.tex

--- a/cv.tex
+++ b/cv.tex
@@ -61,7 +61,7 @@
 
 \section{Research Experience}
 
-\subsection{Visiting student}, Kaust, Kingdom of Saudi Arabia. \hfill March 2014--Present
+\subsection{Visiting student}, KAUST, Kingdom of Saudi Arabia. \hfill March 2014--Present
 
 \begin{itemize}
   \item To develop new computer vision algorithms for tracking using multiple cameras and depth information.  
@@ -81,7 +81,7 @@
 \section{Awards and Honors}
 
 \begin{itemize}
-  \item I am the recipient of a Kaust Visiting Student Research Program. \hfill March 2014
+  \item I am the recipient of a KAUST Visiting Student Research Program. \hfill March 2014
   \item I was selected as Young Research by the national science agency \hfill January 2013 \\
   of Colombia (COLCIENCIAS). 
   \item I was selected as Young Research by the national science agency \hfill January 2012 \\
