Minor changes on cv.tex

--- a/cv.tex
+++ b/cv.tex
@@ -98,7 +98,7 @@ Glasgow, Scotland. \\
 \emph{Accepted Paper: Fabian Caba Heilbron and Juan Carlos Niebles. Collecting and Annotating Human Activities in Web Videos.}
 \\ \emph{Abstract.} Recent efforts in computer vision tackle the problem of human activity understanding in video sequences. Traditionally, these algorithms require annotated video data to learn models. In this paper, we introduce a novel data collection framework, to take advantage of the large amount of video data available on the web. We use this new framework to retrieve videos of human activities in order to build datasets for training and evaluating computer vision algorithms. We rely on Amazon Mechanical Turk workers to obtain high accuracy annotations. An agglomerative clustering technique brings the possibility to achieve reliable and consistent an- notations for temporal localization of human activities in videos. Using two different datasets, Olympic Sports and our novel Daily Human Activities database, we show that our collection/annotation framework achieves robust annotations for human activities in large amount of video data.
 
-\subsection{European Conference on Computer Vision} \hfill September 7, 2014 \\ 
+\subsection{European Conference on Computer Vision.} \hfill September 7, 2014 \\ 
 Zurich, Switzerland. \\
 \emph{Paper in review: Ali Thabet, Fabian Caba Heilbron, Juan Carlos Niebles and Bernard Ghanem. Robust Estimation of Manhattan Scene Layout from a Single RGB-D Image.}
 \\ \emph{Abstract.} This paper proposes a new framework for estimating the layout of indoor scenes from RGB-D images. Our technique formulates the problem as the estimation of a rotation matrix that best aligns the normals of the captured scene to a canonical world axis. 
