--- a/cv.tex
+++ b/cv.tex
@@ -36,56 +36,78 @@
   \textbf{Fabian Caba Heilbron} \\[1ex]
   \normalsize
   \url{http://www.cabaf.net} \\
-  fabiancabaheilbron@gmail.com
+  fabian.caba@kaust.edu.sa \\
+  \href{tel:966544513511}{+966 54 451 3511}
 \end{center}
 
 
 \section{Education}
 
-\subsection{Universidad del Norte}, Barranquilla, Colombia. \hfill January 2012--February 2014 
+\subsection{KAUST}, Saudi Arabia. \hfill January 2015 - 
 
 \begin{itemize}
-  \item MS.C. in Electronics Engineering with Highest Honors (GPA: 4.5/5.0).
-  \item Thesis:  \emph{Retrieving, Annotating and Recognizing Human Activity in Web Videos}
-  \item Advisor:  \emph{Prof.~Mar\'ia Calle} \\
+  \item Ph.D. in Electrical Engineering.
+  \item Thesis: Large Scale Human Activity Understanding from Video
+  \item Advisor: Prof. Bernard Ghanem \\
   
 \end{itemize}
 
-\subsection{Universidad del Norte}, Barranquilla, Colombia. \hfill January 2007--September 2011 
+\subsection{Universidad del Norte}, Barranquilla, Colombia. \hfill January 2012 - February 2014 
 
 \begin{itemize}
-  \item B.S. in Electronics Engineering with Highest Honors (GPA: 4.1/5.0).
-  \item Thesis:  \emph{Efficient storage for energy micro-generation from ocean waves}
-  \item Adviser:  \emph{Prof. Juan Carlos Niebles} \\
+  \item \textit{Master of Science} in Electronics Engineering (GPA: 4.5/5.0)
+  \item Thesis: Retrieving, Annotating and Recognizing Human Activity in Web Videos
+  \item Advisor: Prof. Juan Carlos Niebles \\
+  
 \end{itemize}
 
-\section{Research Experience}
-
-\subsection{Visiting student}, KAUST, Kingdom of Saudi Arabia. \hfill March 2014--Present
+\subsection{Universidad del Norte}, Barranquilla, Colombia. \hfill January 2007 - September 2011 
 
 \begin{itemize}
-  \item To develop new computer vision algorithms for tracking using multiple cameras and depth information.  
-  \item To design algorithms for efficient, fast and accurate extraction of trajectory features in video sequences.  
-  \item Adviser:  Bernard Ghanem
+  \item \textit{Bachelor of Science} in Electronics Engineering (GPA: 4.1/5.0)
+  
 \end{itemize}
 
-\subsection{Research assistant}, Universidad del Norte. \hfill January 2012--March 2014
+\section{Technical Experience}
+\subsection{ActivityNet}. Large scale benchmark for human activity understanding. 
+\href{http://activity-net.org/}{See website}
 
-\begin{itemize}
-  \item Developed new computer vision algorithms for human activity recognition.
-  \item Designed web tools to gather and annotate YouTube videos.
-  \item Performed experimental studies of video-base human activity understanding.
-  \item Adviser:  Juan Carlos Niebles
-\end{itemize}
+%\section{Research Experience}
+
+%\subsection{Visiting student}, KAUST, Kingdom of Saudi Arabia. \hfill March 2014--Present
+
+%\begin{itemize}
+%  \item To develop new computer vision algorithms for tracking using multiple %cameras and depth information.  
+%  \item To design algorithms for efficient, fast and accurate extraction of %trajectory features in video sequences.  
+%  \item Adviser:  Bernard Ghanem
+%\end{itemize}
+
+%\subsection{Research assistant}, Universidad del Norte. \hfill January 2012--March %2014
+
+%\begin{itemize}
+%  \item Developed new computer vision algorithms for human activity recognition.
+%  \item Designed web tools to gather and annotate YouTube videos.
+%  \item Performed experimental studies of video-base human activity understanding.
+%  \item Adviser:  Juan Carlos Niebles
+%\end{itemize}
+
+\section{Relevant Information}
+\subsection{Languages}. Spanish, English
+\subsection{Programming skills}. Python, Matlab, JavaScript
+\subsection{Press coverage}. \emph{”Major league of visual recognition” Uninorte News, Barranquilla, Colombia, December 2014. \href{http://www.uninorte.edu.co/web/grupo-prensa/noticia?articleId=4092257&groupId=73923}{See online}}
 
 \section{Awards and Honors}
 
 \begin{itemize}
-  \item I am the recipient of a KAUST Visiting Student Research Program. \hfill March 2014
-  \item I was selected as Young Research by the national science agency \hfill January 2013 \\
-  of Colombia (COLCIENCIAS). 
-  \item I was selected as Young Research by the national science agency \hfill January 2012 \\
-  of Colombia (COLCIENCIAS).
+  \item KAUST Scholarship. Saudi Arabia. \hfill 2015 – 
+  \item Outstanding Young Research Scientist. Barranquilla, Colombia. \hfill 2012 - 2014
+  \item Dean’s List. Universidad del Norte. Barranquilla, Colombia. \hfill 2007 - 2011
+\end{itemize}
+
+\section{Professional Activities}
+
+\begin{itemize}
+ \item Program chair of the Large Scale Activity Recognition Challenge. \href{http://activity-net.org/challenges/2016/}{See website} 
 \end{itemize}
 
 \pagebreak
@@ -93,23 +115,29 @@
 
 \section{Publications}
 
-\subsection{International Conference on Multimedia Retrieval.} \hfill April 1, 2014 \\ 
+\subsection{IEEE Conference on Computer Vision and Pattern Recognition} \hfill To Appear \\
+Las Vegas, United States. \\
+Fabian Caba Heilbron, Juan Carlos Niebles, Bernard Ghanem. \\
+\textit{Fast Temporal Activity Proposals for Efficient Detection of Human Actions in Untrimmed Videos}
+
+\subsection{IEEE Conference on Computer Vision and Pattern Recognition} \hfill June, 2015 \\ 
+Boston, United States. \\
+Fabian Caba Heilbron, Victor Escorcia, Bernard Ghanem, Juan Carlos Niebles. \\ \textit{ActivityNet: A Large-Scale Video Benchmark for Human Activity Understanding}
+
+\subsection{IEEE Conference on Computer Vision and Pattern Recognition} \hfill June, 2015 \\ 
+Boston, United States. \\
+Bernard Ghanem, Ali Thabet, Juan Carlos Niebles, Fabian Caba Heilbron. \\
+\textit{Robust Manhattan Frame estimation from a single RGB-D image}
+
+\subsection{Asian Conference on Computer Vision} \hfill November, 2014 \\ 
+Singapore. \\
+Fabian Caba Heilbron, Ali Thabet, Juan Carlos Niebles, Bernard Ghanem. \\
+\textit{Camera Motion and Surrounding Scene Appearance as Context for Action Recognition}
+
+\subsection{International Conference on Multimedia Retrieval.} \hfill April, 2014 \\ 
 Glasgow, Scotland. \\
-\emph{Accepted Paper: Fabian Caba Heilbron and Juan Carlos Niebles. Collecting and Annotating Human Activities in Web Videos.}
-\\ \emph{Abstract.} Recent efforts in computer vision tackle the problem of human activity understanding in video sequences. Traditionally, these algorithms require annotated video data to learn models. In this paper, we introduce a novel data collection framework, to take advantage of the large amount of video data available on the web. We use this new framework to retrieve videos of human activities in order to build datasets for training and evaluating computer vision algorithms. We rely on Amazon Mechanical Turk workers to obtain high accuracy annotations. An agglomerative clustering technique brings the possibility to achieve reliable and consistent an- notations for temporal localization of human activities in videos. Using two different datasets, Olympic Sports and our novel Daily Human Activities database, we show that our collection/annotation framework achieves robust annotations for human activities in large amount of video data.
+Fabian Caba Heilbron and Juan Carlos Niebles. \\
+\textit{Collecting and Annotating Human Activities in Web Videos}
 
-\subsection{European Conference on Computer Vision.} \hfill September 7, 2014 \\ 
-Zurich, Switzerland. \\
-\emph{Paper in review: Ali Thabet, Fabian Caba Heilbron, Juan Carlos Niebles and Bernard Ghanem. Robust Estimation of Manhattan Scene Layout from a Single RGB-D Image.}
-\\ \emph{Abstract.} This paper proposes a new framework for estimating the layout of indoor scenes from RGB-D images. Our technique formulates the problem as the estimation of a rotation matrix that best aligns the normals of the captured scene to a canonical world axis. 
-By introducing sparsity constraints, our method can simultaneously estimate the scene layout, the surfaces in the scene that are 
-best aligned to the coordinate axis and the outlier surfaces that do not match any of the axis. In order to test our approach, we contribute a new set of annotations for the task of scene layout estimation. We use this new benchmark to experimentally demonstrate that our method is more accurate, faster, more reliable and more robust than the methods used in the state-of-the-art scene recognition literature. 
-
-\section{Relevant Information}
-
-\subsection{Programming skills}. Matlab (Advanced), Python (Intermediate), JavaScript (Intermediate), PHP (Intermediate), C++ (Basic)
-\subsection{Languages}. Spanish (Mother-tongue), English (Intermediate), Italian (Basic)
-\subsection{Popular press}. \emph{"Computers are closer to see" ADN News, Barranquilla, Colombia, April 2014. \href{http://diarioadn.co/barranquilla/mi-ciudad/computadores-que-vean-quieren-desarrollar-en-uninorte-1.100357}{See online}}
-\subsection{Interests}. Hobbies include snorkeling, chess, soccer, photography and traveling
 
 \end{document}
